# automation-simulator

./: .gitignore  CHANGELOG.org  CONTRIBUTING.org  Cargo.toml  README.org  USAGE.org  config.example.toml  flake.nix  foodforest_automation.docx  foodforest_automation.org  justfile  project_plan.org
.cargo-husky/hooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml
crates/cli/: Cargo.toml
crates/cli/src/: config.rs  logging.rs  main.rs
crates/cli/src/commands/: mod.rs  seed.rs
crates/cli/tests/: integration_test.rs
crates/lib/: Cargo.toml
crates/lib/migrations/: 0001_init_schema.down.sql  0001_init_schema.up.sql
crates/lib/src/: lib.rs
crates/lib/src/catalog/: errors.rs  mod.rs  models.rs  tests.rs
crates/lib/src/db/: errors.rs  mod.rs  rows.rs
crates/lib/src/engine/: clock.rs  flow.rs  mod.rs  soil.rs  weather.rs  world.rs
crates/lib/src/hw/: controller.rs  errors.rs  mod.rs  sensor.rs  simulated.rs
crates/lib/src/planner/: errors.rs  mod.rs  plan.rs  recommend.rs  requirements.rs  scoring.rs
crates/lib/src/seed/: errors.rs  mod.rs
crates/lib/src/sim/: errors.rs  hardware.rs  id.rs  mod.rs  plant.rs  property.rs  scenario.rs  zone.rs
crates/lib/tests/: catalog_snapshot.rs  db_roundtrip.rs  engine_30day_scenario.rs  engine_properties.rs  no_hardcoded_property_names.rs  planner_recommend.rs  scenario_20day_demo.rs  seed_example_property.rs
crates/lib/tests/snapshots/: catalog_snapshot__seeded_catalog_controller_ids_match_snapshot.snap  catalog_snapshot__seeded_catalog_counts_match_snapshot.snap  catalog_snapshot__seeded_catalog_emitter_ids_match_snapshot.snap  engine_30day_scenario__moisture_time_series_matches_snapshot.snap
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  logging.rs  main.rs  web_base.rs
crates/server/src/routes/: catalog.rs  mod.rs  planner.rs  properties.rs  sensors.rs  sim.rs  weather.rs  zones.rs  zones_crud.rs
crates/server/tests/: integration_test.rs
data/catalog/: backflow-preventers.toml  compute-hosts.toml  controllers.toml  drip-lines.toml  emitters.toml  manifolds.toml  pressure-regulators.toml  sensors.toml  soil-types.toml  species.toml  weather-stations.toml
data/properties/: example-property.toml
data/scenarios/: 2026-07-heatwave.toml  README.org
docs/: property-schema.org  systemd.org
frontend/: elm-srcs.nix
frontend/public/: index.html  style.css
frontend/src/: Api.elm  Main.elm
frontend/src/Page/: Dashboard.elm  Designer.elm  Properties.elm
frontend/src/Widget/: SimControls.elm  Weather.elm  YardMap.elm  ZoneCard.elm  ZoneEditor.elm
nix/modules/: darwin-server.nix  nixos-server.nix
