[workspace]
resolver = "2"
members = [
    "crates/cli",
    "crates/lib",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Eric Inman <ericrinman@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/eric-r-inman/automation-simulator"

[workspace.dependencies]
# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-journald = "0.3"

# Systemd integration.  Pinned to 0.4 pending the 0.5 API migration;
# dependabot's auto-merged 0.5 bump (#7) broke sd-notify callsites in
# crates/server/src/systemd.rs.
sd-notify = "0.5"

# Utilities
# tap - Enables method chaining and reduces superfluous local variables
# that only exist to name intermediate results. Prefer .tap() over temporary
# variables when it improves readability.
tap = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Configuration.  toml is pinned to 0.8; dependabot's auto-merged 1.1
# bump (#6) broke ConfigFileRaw deserialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
thiserror = "2.0"

# Web framework
axum = "0.8"
tokio = { version = "1.51", features = ["full"] }
tokio-listener = { version = "0.5", features = ["axum08"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "set-header"] }

# Testing
tempfile = "3"

# OpenMetrics/Prometheus.  0.13 is pinned pending the 0.14 migration;
# dependabot's auto-merged 0.14 bump (#5) broke Registry usage.
prometheus = "0.13"

# OpenAPI.  schemars is pinned to 0.9 because aide 0.15 (our transitive
# dependency for the Scalar UI) requires schemars <1.0.  Dependabot's
# auto-merged 1.2 bump (#3) broke aide's macro-generated handlers.
aide = { version = "0.15", features = ["axum", "axum-json", "axum-query", "scalar", "macros"] }
schemars = "0.9"

# Authentication.  Pinned to 3 pending the 4.x migration; dependabot's
# auto-merged 4.0 bump (#2) broke crates/server/src/auth.rs.
openidconnect = { version = "3", features = ["reqwest"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
tower-sessions = { version = "0.15", features = ["memory-store"] }

# Persistence: sqlx with the SQLite backend.  sqlx gives us
# compile-time-checked queries via macros, native async, and typed
# migrations.  chrono + uuid integrations keep timestamp and id columns
# strongly typed end-to-end.
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio",
  "tls-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
  "uuid",
] }

# Dates and ids used across the domain model, api types, and database.
chrono = { version = "0.4", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
uuid = { version = "1", features = ["serde", "v4"] }

# Seeded RNG for deterministic scenario runs.  ChaCha8 is fast and
# portable across platforms, which matters for reproducible snapshots.
rand = "0.8"
rand_chacha = "0.3"

# Test-only crates.  proptest drives property-based tests of the soil
# moisture model and scheduler; insta captures snapshots of simulation
# time series and generated OpenAPI output.
proptest = "1"
insta = { version = "1", features = ["yaml"] }

# Shared library
automation-simulator-lib = { path = "crates/lib" }

# ============================================================================
# BUILD PROFILES
# ============================================================================
# Without these settings, target/debug can easily reach 20-40 GB on
# non-trivial projects.  Dependencies are the primary culprit.
#
# See https://doc.rust-lang.org/cargo/reference/profiles.html

[profile.dev]
# No debug symbols.  The debugger is rarely used and debug symbols are
# the single largest contributor to target/ bloat.
debug = false
# Disable incremental compilation.  Incremental writes many small files
# to target/debug/incremental/ that accumulate quickly; the compile-time
# benefit rarely outweighs the disk cost for typical workflows.
incremental = false

[profile.dev.package."*"]
# Optimize dependencies even in dev builds.  Libraries like tokio and
# axum are bottlenecks when unoptimized; this makes the program run at
# near-release speed during development with minimal extra compile time
# on subsequent incremental builds.
opt-level = 3

[profile.release]
debug = false
