[package]
name = "automation-simulator-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "automation-simulator-cli"
path = "src/main.rs"

[dependencies]
automation-simulator-lib = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals

# Added in Phase 1 so the Phase 5 `seed` subcommand can open the same
# SQLite database the server uses, without re-touching this manifest.
sqlx = { workspace = true }
# clap argument parsing also needs a runtime to drive the async sqlx
# calls from seeds; reuse the server's tokio.
tokio = { workspace = true }
