[package]
name = "automation-simulator-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals

# Added in Phase 1: crates the simulator core will depend on.  Wired up
# here so later phases can import without re-touching Cargo manifests.
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }

[dependencies.toml]
workspace = true

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
proptest = { workspace = true }
insta = { workspace = true }
serde_json = { workspace = true }
# Catalog loader tests build ad-hoc catalog directories so changes to
# seeded fixtures cannot break loader invariants and vice versa.
tempfile = { workspace = true }
