[package]
name = "automation-simulator-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic simulation engine for automatic food-forest irrigation systems: catalog-driven domain model, soil-moisture ODE, hardware-abstraction traits, and SQLite persistence."
readme = "../../README.org"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tap = { workspace = true }  # For method chaining, reduces superfluous locals

# Added in Phase 1: crates the simulator core will depend on.  Wired up
# here so later phases can import without re-touching Cargo manifests.
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
# hw traits: async_trait decorator for dyn-compatibility.
async-trait = { workspace = true }
# tokio needed by hw::simulated for its async Mutex used to protect
# the shared SimWorld state across async trait method calls.
tokio = { workspace = true }
# Used by the db layer for JSON-encoded columns (controller zone
# assignments, sim-event payloads, property-design state) and shared
# with the catalog loader.
serde_json = { workspace = true }

[dependencies.toml]
workspace = true

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
proptest = { workspace = true }
insta = { workspace = true }
# Catalog loader tests build ad-hoc catalog directories so changes to
# seeded fixtures cannot break loader invariants and vice versa.
tempfile = { workspace = true }
